added table to writeup; fixed some problem with the Doria2009 citation; switched some citations in the architecture section to use sergeyk-icra12.bib citations

--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -34,7 +34,7 @@ The vote totals are output as the estimated likeness ratings.
 The registered distance from the four top canidates are returned as the estimated euclidean distances.
 Finally, the model that registers most closely with the scene is selected as the detected model.
 
-The other detectors that we are publishing are variants that replace FPFH with other local features supported by PCL. There are branches using PFH \cite{pfh1, pfh2}, spin images \cite{spin}, and SHOT \cite{shot}.
+The other detectors that we are publishing are variants that replace FPFH with other local features supported by PCL. There are branches using PFH \cite{Rusu2009}, spin images \cite{Johnson99}, and SHOT \cite{shot}.
 The classification and registration mechanisms remain the same.
 
 \subsection{Proctor}
