--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -19,7 +19,7 @@ For testing, the detector receives a range scan of some model, at some angle. It
 In particular, we intend that detection systems that fit the description in the previous paragraph populate the similarities with classifier scores and populate the precise distances with euclidean distances after registration.
 Ultimately, the Detector class is intended to be something that algorithm authors shall edit.
 
-\subsubsection{Stock Detector Implementations}
+\subsubsection{Primary Stock Detector}
 We are publishing the current contribution with a few stock detectors, which serve as both a scaffolding for modular enhancements and baselines for larger efforts.
 The primary stock implementation makes use of Fast Point Feature Histograms \cite{fpfh1, fpfh2}, a voting-based classification algorithm, and registration.
 
@@ -34,7 +34,8 @@ The vote totals are output as the estimated likeness ratings.
 The registered distance from the four top canidates are returned as the estimated euclidean distances.
 Finally, the model that registers most closely with the scene is selected as the detected model.
 
-The other detectors that we are publishing are variants that replace FPFH with other local features supported by PCL. There are branches using PFH \cite{Rusu2009}, spin images \cite{Johnson99}, and SHOT \cite{shot}.
+\subsubsection{Stock Variants}
+The other detectors that we are publishing are variants that replace FPFH with other local features supported by PCL. There are branches using PFH \cite{pfh1, pfh2}, spin images \cite{Johnson99}, and SHOT \cite{shot}.
 The classification and registration mechanisms remain the same.
 
 \subsection{Proctor}
