--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -25,6 +25,7 @@
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{subfig}
+\usepackage{array}
 
 \newcommand{\note}[1]{\textcolor{red}{\textbf{#1}}}
 
