--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -66,15 +66,35 @@ Proctor: Evaluating 3-D Recognition
 
 \begin{abstract}
 
-Recently proliferation of cheap 3-D sensors.
-Lots of work on feature representations.
-But no unified evaluation available.
-We present an evaluation framework for point cloud-based recognition.
-Flexible as to dataset and feature.
-Modular design.
-Provides several metrics.
-Open source.
-We hope that this becomes a standard evaluation for future featurizations for 3-D recognition tasks.
+
+Until recently, the field of 3D perception was a niche domain. With the advent
+of inexpensive and accurate 3D imaging sensors, there has been an explosion of
+interest in 3D point clouds across a broad range of researchers and application
+developers. In the past few years, various research fields have developed
+many different feature representations that operate in 3D geometry spaces, but
+no unified evaluation has ever been performed due to a poor intersection between
+these burgeoning communities.
+
+In this paper we present a comprehensive evaluation framework for 3D point
+cloud-based recognition: Proctor. Our design is modular and we make no
+restrictions with respect to the type of features or datasets that we can
+operate on. The framework is designed to automatically test large ranges of
+parameters and estimate several metrics that can be automatically included in
+future publications. To encourange its use, we release the entire Proctor
+infrastructure under a permissive BSD license, linked to the Point Cloud
+Library (PCL) project~\cite{PCL}.
+
+%Recently proliferation of cheap 3-D sensors.
+%Lots of work on feature representations.
+%But no unified evaluation available.
+%We present an evaluation framework for point cloud-based recognition.
+%Flexible as to dataset and feature.
+%Modular design.
+%Provides several metrics.
+%Open source.
+
+We hope that this becomes a standard evaluation for future featurizations for
+3-D recognition tasks.
 
 \end{abstract}
 
