added a preliminary URL for future contributions

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -26,6 +26,7 @@
 \usepackage{graphicx}
 \usepackage{subfig}
 \usepackage{array}
+\usepackage{url}
 
 \newcommand{\note}[1]{\textcolor{red}{\textbf{#1}}}
 
@@ -107,10 +108,17 @@ We hope that this becomes a standard evaluation for future featurizations for
 
 \section{COMMUNITY AND FUTURE PLANS}
 
-This paper describes the motivation for a standard 3-D recognition pipeline evaluation framework and explains our choices for the particular components of our implementation.
-We hope that future work in 3-D feature detection, description, or subsequent recognition or pose estimation mechanisms will base itself on this framework.
-The project of a general, modular 3-D preception evaluation framework is tremendous, and would benefit from code and testing contributions as much as its existence benefits researchers in these areas.
-Therefore we have provided all code and documentation open-source, and welcome contributions at \note{nice url here}.
+This paper describes the motivation for a standard 3-D recognition pipeline
+evaluation framework and explains our choices for the particular components of
+our implementation.
+
+We hope that future work in 3-D feature detection, description, or subsequent
+recognition or pose estimation mechanisms will base itself on this framework.
+The project of a general, modular 3-D preception evaluation framework is
+tremendous, and would benefit from code and testing contributions as much as its
+existence benefits researchers in these areas.
+Therefore we have provided all code and documentation open-source, and welcome
+contributions at \url{http://www.pointclouds.org/proctor}.
 
 \note{more about next steps?}
 
