added PCL reference

--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -137,3 +137,12 @@ ISSN={},}
  publisher = {Prentice-Hall, Inc.},
  address = {Upper Saddle River, NJ, USA},
 } 
+
+@InProceedings{PCL,
+  title = {{3D is here: Point Cloud Library (PCL)}},
+  booktitle = {International Conference on Robotics and Automation (ICRA)},
+  year = {2011},
+  month = {May},
+  address = {Shanghai, China},
+  author = {Radu Bogdan Rusu and Steve Cousins}
+}
