add wgdb to related work

--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -93,6 +93,10 @@ A standard evaluation for 3-D shape retrieval, classification, and clustering ap
 The models are provided in polygonal format, and are divided into standard training and test datasets.
 As for many other papers in the field, this dataset provides the evaluation basis of our implementation.
 
+{\bf Willow Garage Grasping Database \cite{wgdb}}:
+A collection of small household objects appropriate for a robot to hold.
+These models are also in polygonal format.
+
 \subsubsection{2D/3D Data}
 {\bf Rgbd-dataset of \cite{Lai2011}}:
 This dataset features 300 objects in 51 categories.
