--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -146,3 +146,9 @@ ISSN={},}
   address = {Shanghai, China},
   author = {Radu Bogdan Rusu and Steve Cousins}
 }
+
+@misc {wgdb,
+  author = {Matei Ciocarlie},
+  title = {household_objects_database},
+  url = {http://www.ros.org/wiki/household_objects_database}
+}
