--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -149,6 +149,6 @@ ISSN={},}
 
 @misc {wgdb,
   author = {Matei Ciocarlie},
-  title = {household_objects_database},
+  title = {Household Objects Database},
   url = {http://www.ros.org/wiki/household_objects_database}
 }
