--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -78,9 +78,8 @@ no unified evaluation has ever been performed due to a poor intersection between
 these burgeoning communities.
 
 In this paper we present a comprehensive evaluation framework for 3D point
-cloud-based recognition: Proctor. Our design is modular and we make no
-restrictions with respect to the type of features or datasets that we can
-operate on. The framework is designed to automatically test large ranges of
+cloud-based recognition: Proctor.
+The framework is designed to automatically test large ranges of
 parameters and estimate several metrics that can be automatically included in
 future publications. To encourange its use, we release the entire Proctor
 infrastructure under a permissive BSD license, linked to the Point Cloud
