adding precisin-recall figure

--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -21,6 +21,13 @@ The results for the Princeton Shape Benchmark can be seen in~\ref{tab:psb_result
   \label{tab:psb_results}
 \end{table}
 
+\begin{figure}[thpb]
+\centering
+\includegraphics[width=1\linewidth]{../figures/PFH-FPFH-SHOT-SPIN_IMAGE_pr.png}
+\caption{Precision-Recall evaluation of the detectors.}
+\label{fig:pr}
+\end{figure}
+
 \input{../results/PFH-FPFH-SHOT-SPIN_IMAGE_features.tex}
 
 An additional important evaluation is the runtime performance of different methods.
@@ -37,8 +44,3 @@ In all cases, the tests were run on a 2.50 GHz Intel Core2 Quad Q9300 with 4 GB 
 * confusion matrix figures
 
 * table of timing results
-
-%\begin{figure}[thpb]
-%   \centering
-%   \label{fig:results}
-%\end{figure}
