+ sentence on II.A and II.B

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -118,7 +118,7 @@ The project of a general, modular 3-D preception evaluation framework is
 tremendous, and would benefit from code and testing contributions as much as its
 existence benefits researchers in these areas.
 Therefore we have provided all code and documentation open-source, and welcome
-contributions at \url{http://www.pointclouds.org/proctor}.
+contributions at \url{http://proctor.pointclouds.org}.
 
 \note{more about next steps?}
 
