--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -41,7 +41,7 @@ In the latter cases, the models may contains noise which may or may not be of th
 
 A common approach to all of these tasks, under many of the view and dataset conditions, is to extract local features from the 3-D data, which can then be matched to models in a database.
 Matching features ``vote'' for a particular model, and subsequent algorithms can evaluate the alignment of the hypothesis model to the sensor data.
-Although we choose to focus on this paradigm, it is but one of many approaches to 3-D shape retrieval \cite{Tangelder2004}.
+Although we choose to focus on this paradigm, it is but one of many approaches to 3-D shape retrieval \cite{Tangelder2004}. We discuss a list of 3D descriptors and various different datasets in the following subsections.
 
 \subsection{Features}
 The most classic feature in the 3-D perception community is the Spin Image \cite{Johnson1999}.
