--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -147,7 +147,19 @@ ISSN={},}
   author = {Radu Bogdan Rusu and Steve Cousins}
 }
 
-@misc {wgdb,
+@Article{SpinImages,
+  author  = {Andrew Johnson and Martial Hebert},
+  title   = {{Using spin images for efficient object recognition in cluttered 3D scenes}},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  month   = {May},
+  year    = {1999},
+  volume  = {21},
+  number  = {5},
+  pages   = {433-449}
+}
+
+
+@misc{wgdb,
   author = {Matei Ciocarlie},
   title = {Household Objects Database},
   url = {http://www.ros.org/wiki/household_objects_database}
