fixed bibs for solutions in perception

--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -53,12 +53,10 @@
 	Title = {Stereo-based Pedestrian Detection using Multiple Patterns},
 	Year = {2009}}
 
-@misc{sipc,
-	Date-Added = {2011-03-01 00:57:02 +0100},
-	Date-Modified = {2011-03-01 01:43:12 +0100},
-	Howpublished = {http://opencv.willowgarage.com/wiki/SolutionsInPer-
-	ceptionChallenge},
-	Title = {Solution in Perception Challenge}}
+@TechReport{sipc,
+	note = {\url{http://www.solutionsinperception.org}},
+	Title = {Solution in Perception Challenge}
+}
 
 @misc{Doria2009,
   Author	= "D. Doria",
