--- a/writeups/icra12/sergeyk-icra12.bib
+++ b/writeups/icra12/sergeyk-icra12.bib
@@ -107,9 +107,9 @@ url = {http://www.springerlink.com/openurl.asp?id=doi:10.1023/B:VISI.0000027790.
 volume = {60},
 year = {2004}
 }
-@misc{SIPC2011,
+@Misc{SIPC2011,
 title = {{Solutions in Perception Challenge}},
-url = {http://solutionsinperception.org/},
+note = {\url{http://solutionsinperception.org/}},
 year = {2011}
 }
 @inproceedings{Tangelder2004,
