future work blurb

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -116,10 +116,16 @@ recognition or pose estimation mechanisms will base itself on this framework.
 The project of a general, modular 3-D preception evaluation framework is
 tremendous, and would benefit from code and testing contributions as much as its
 existence benefits researchers in these areas.
-Therefore we have provided all code and documentation open-source, and welcome
+
+Therefore we have provided all code and documentation under a permissive BSD
+open-source license, and welcome future
 contributions at \url{http://www.pointclouds.org/proctor}.
 
-\note{more about next steps?}
+Our future work includes the expansion of feature descriptors to be tested,
+including texture descriptors that operate on RGBD-like datasets, as well as
+more comprehensive detection/evaluation mechanisms for ``global'' descriptors.
+
+% \note{more about next steps?}
 
 % \section{ACKNOWLEDGMENTS}
 % 
