oh god, spent so long on trying to get a bar panel chart (with gaps) but couldnt in the end, so stacked bar chart for now

--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -28,6 +28,14 @@ The results for the Princeton Shape Benchmark can be seen in~\ref{tab:psb_result
 \label{fig:pr}
 \end{figure}
 
+\begin{figure}[thpb]
+\centering
+\includegraphics[width=1\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test.png}
+\caption{Timing results of runnign detection with different features.}
+\label{fig:timing}
+\end{figure}
+
+
 \input{../results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features.tex}
 
 An additional important evaluation is the runtime performance of different methods.
