New dashboard figure. The old way of displaying all results on a single page wasn't working. I tried several things and concluded that the rank histograms have to be pulled into a single plot.

--- a/writeups/results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features_preview.tex
+++ b/writeups/results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features_preview.tex
@@ -12,6 +12,8 @@
 \usepackage{array}
 \usepackage{url}
 
+\usepackage{fullpage}
+
 \begin{document}
 
 \input{PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features.tex}
