fix typo in abstract

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -81,7 +81,7 @@ In this paper we present a comprehensive evaluation framework for 3D point
 cloud-based recognition: Proctor.
 The framework is designed to automatically test large ranges of
 parameters and estimate several metrics that can be automatically included in
-future publications. To encourange its use, we release the entire Proctor
+future publications. To encourage its use, we release the entire Proctor
 infrastructure under a permissive BSD license, linked to the Point Cloud
 Library (PCL) project~\cite{PCL}.
 
