fix typo in evaluation

--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -37,7 +37,7 @@ The results for the Princeton Shape Benchmark can be seen in~\ref{tab:PSB_result
 \begin{figure}[thpb]
 \centering
 \includegraphics[width=1\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test.png}
-\caption{Timing results of runnign detection with different features.}
+\caption{Timing results of running detection with different features.}
 \label{fig:timing}
 \end{figure}
 
