--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -34,12 +34,14 @@ The results for the Princeton Shape Benchmark can be seen in~\ref{tab:PSB_result
   \label{fig:PSB_dashboard}
 \end{figure*}
 
-\begin{figure}[thpb]
+\begin{figure*}[thpb]
 \centering
-\includegraphics[width=1\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test.png}
-\caption{Timing results of runnign detection with different features.}
-\label{fig:timing}
-\end{figure}
+\subfloat[Total time spent in training.]{\includegraphics[width=0.45\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_train_total.png}}
+\subfloat[Total time spent in testing.]{\includegraphics[width=0.45\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_test_total.png}} \\
+\subfloat[Breakdown of where time is spent in the testing phase.]{\includegraphics[width=0.95\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test.png}} 
+\caption{Timing results on the Princeton Shape Benchmark dataset.}
+\label{fig:PSB_timing}
+\end{figure*}
 
 %\input{../results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features.tex}
 
