--- a/writeups/results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
+++ b/writeups/results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ | l || c | c | c | c | }
 \hline
-Metric & PFH & FPFH & SHOT & Spin Image \\
+Metric & PFH & FPFH & SHOT & Spin \\
 \hline
  \% Correct & 86.25 & \bf 87.50 & 73.75 & 49.35 \\
 AP & 0.85 & \bf 0.86 & 0.64 & 0.31 \\
