added a panel bar chart of timing breakdown

--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -38,7 +38,8 @@ The results for the Princeton Shape Benchmark can be seen in~\ref{tab:PSB_result
 \centering
 \subfloat[Total time spent in training.]{\includegraphics[width=0.45\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_train_total.png}}
 \subfloat[Total time spent in testing.]{\includegraphics[width=0.45\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_test_total.png}} \\
-\subfloat[Breakdown of where time is spent in the testing phase.]{\includegraphics[width=0.95\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test.png}} 
+\vspace{1em}
+\subfloat[Breakdown of where time is spent in the testing phase.]{\includegraphics[width=0.95\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test_panel.png}} 
 \caption{Timing results on the Princeton Shape Benchmark dataset.}
 \label{fig:PSB_timing}
 \end{figure*}
