changes from Pieter

--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -19,15 +19,13 @@ In computer vision, standard datasets and evaluation tasks such as the Caltech-1
 
 Our system, Proctor, aims for the same kind of impact in 3-D features, and classification and pose estimation methods research.
 
-\section{RELATED WORK}
+\section{PROBLEM SETTING}
 
-A full accounting of 3-D perception problems that have been subject to research would not be possible given our format.
-Instead, we attempt a concise description of the common problem formulations, which can be divided among several dimensions.
-
+There is a wide range of 3-D perception problems.  While in the longer run the goal of our framework is to capture this wide range more comprehensively, for now it is focused on the following types of tasks:
 Given a database and a view, our task may be to:
 \begin{itemize}
-\item identify the object in the view (recognition)
-\item identify the object and its pose in the view (pose estimation)
+\item identify the object in the view (recognition),
+\item identify the object and its pose in the view (pose estimation),
 \item localize an object in the view and identify it (detection)
 \end{itemize}
 
