--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -27,6 +27,7 @@
 \usepackage{subfig}
 \usepackage{array}
 \usepackage{url}
+\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false,citecolor=red,linkcolor=blue]{hyperref}
 
 \newcommand{\note}[1]{\textcolor{red}{\textbf{#1}}}
 
