remove PR2 citation note

--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -14,7 +14,7 @@ But the sheer diversity of applications has made it hard to see the common patte
 We hope to foster easier sharing of ideas and methods through a common evaluation framework for 3-D perception tasks.
 In this paper, we present an open-source framework for comparing different 3-D features in the model matching evaluation regime.
 We explain the motivations behind our system and describe its modular architecture, with the aim of encouraging a community of users and contributors.
-In robotics, the PR2 \note{citation?} has facilitated rapid progress in personal robotics research due to standardization and abstraction of the hardware interface.
+In robotics, the Willow Garage PR2 has facilitated rapid progress in personal robotics research due to standardization and abstraction of the hardware interface.
 In computer vision, standard datasets and evaluation tasks such as the Caltech-101 \cite{FeiFei2007a} and the PASCAL Visual Object Challenge \cite{pascal-voc-2010} have focused research by giving groups a clear metric, and resulted in rapid logistic-curve improvement in object classification and detection.
 
 Our system, Proctor, aims for the same kind of impact in 3-D features, and classification and pose estimation methods research.
