--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -7,7 +7,12 @@ Since the dataset contains polygonal representations, the framework uses simulat
 
 Our evaluation framework has two major parts. First is the Detector class, which houses the detection logic. Second is the Proctor class, which generates tests and reports.
 
-\fbox{include an architectural graph / oodraw/inkscape/etc here}
+\begin{figure}[thpb]
+  \centering
+  \includegraphics[width=\columnwidth]{../figures/architecture.pdf}
+  \caption{Architectural overview of Proctor and stock Detector implementation}
+  \label{fig:arch}
+\end{figure}
 
 \subsection{Detector}
 In designing this class, we tried to accommodate a common strategy in detection systems.
